Update pre-merge.yml for Azure Pipelines

--- a/pre-merge.yml
+++ b/pre-merge.yml
@@ -57,6 +57,14 @@ steps:
     condition:
         succeededOrFailed()
 
+  - task: VeracodePipelineScan@0
+    inputs:
+      VeracodeAPIID: '$(VERACODE_ID)'
+      VeracodeAPIsecret: '$(VERACODE_KEY)'
+      fileToScan: './target/verademo.war'
+    condition:
+        succeededOrFailed()
+
   - task: CmdLine@2
     name: SaveResultsAsHtmlAndXml
     inputs:
