Update On-Merge.yml for Azure Pipelines

--- a/On-Merge.yml
+++ b/On-Merge.yml
@@ -71,7 +71,7 @@ steps:
 
 - task: Veracode@3
   inputs:
-    ConnectionDetailsSelection: 'Endpoint'
+    ConnectionDetailsSelection: 'Service Connection'
     AnalysisService: 'Veracode Analysis Center'
     veracodeAppProfile: 'Verademo ADO'
     version: 'Post-merge Scan: $(build.buildNumber)'
