Update pipeline_baseline_example.yml for Azure Pipelines

--- a/pipeline_baseline_example.yml
+++ b/pipeline_baseline_example.yml
@@ -33,7 +33,10 @@ steps:
 
 - task: VeracodePipelineScan@0
   inputs:
-    VeracodeAPIID: '$(vid)'
-    VeracodeAPIsecret: '$(vkey)'
-    fileToScan: 'verademo.war'
-    baselineFile: 'baseline-bd08b486-09b1-485b-bf6a-a7d3105fc8f2.json' 
+    VeracodeAPIID: '$(VERACODE_ID)'
+    VeracodeAPIsecret: '$(VERACODE_KEY)'
+    fileToScan: './target/verademo.war'
+    breakPipeline: true
+    baselineFile: 'baseline-bd08b486-09b1-485b-bf6a-a7d3105fc8f2.json'
+  condition:
+      succeededOrFailed()
