Update pipeline_baseline_example.yml for Azure Pipelines

--- a/pipeline_baseline_example.yml
+++ b/pipeline_baseline_example.yml
@@ -29,7 +29,7 @@ steps:
     script: |
       git clone https://github.com/tjarrettveracode/veracode-pipeline-mitigation
       pip install -r ./veracode-pipeline-mitigation/requirements.txt
-      python ./veracode-pipeline-mitigation/vcpipemit.py -a bd08b486-09b1-485b-bf6a-a7d3105fc8f2 -rf base_results.json
+      python ./veracode-pipeline-mitigation/vcpipemit.py -a bd08b486-09b1-485b-bf6a-a7d3105fc8f2 -rf sa
 
 - task: VeracodePipelineScan@0
   inputs:
