Update azure-pipelines-2.yml for Azure Pipelines

--- a/azure-pipelines-2.yml
+++ b/azure-pipelines-2.yml
@@ -25,7 +25,7 @@ steps:
   inputs:
     VeracodeAPIID: '$(vid)'
     VeracodeAPIsecret: '$(vkey)'
-    fileToScan: 'verademo.war'
+    fileToScan: '$(System.DefaultWorkingDirectory)/verademo.war'
 
 - task: CmdLine@2
   inputs:
