Update pre-merge.yml for Azure Pipelines

--- a/pre-merge.yml
+++ b/pre-merge.yml
@@ -69,6 +69,30 @@ steps:
         succeededOrFailed()
 
   - task: CmdLine@2
+    name: SaveResultsAsJunitTestResults
+    inputs:
+      script: |
+        echo Saving results as xml and html
+        curl -sSO https://raw.githubusercontent.com/cadonuno/Pipeline2JUnitXml/master/pipeline2junitxml.py
+        python pipeline2junitxml.py -f results.json --xml_name PipelineScanJunit.xml
+        echo Finished saving results
+    condition:
+        succeededOrFailed()
+
+  - task: PublishTestResults@2
+    inputs:
+      testResultsFormat: 'JUnit'
+      testResultsFiles: 'PipelineScanJunit.xml'
+    condition:
+        succeededOrFailed()
+  - task: PublishBuildArtifacts@1
+    condition:
+        succeededOrFailed()
+    inputs:
+      pathToPublish: 'pipeline-report.html'
+      artifactName: pipeline-result
+
+  - task: CmdLine@2
     name: SaveResultsAsHtmlAndXml
     inputs:
       script: |
