--- a/azure-pipelines-2.yml
+++ b/azure-pipelines-2.yml
@@ -42,11 +42,19 @@ steps:
     script: |
       git clone https://github.com/cadonuno/veracode-pipeline-mitigation
       pip install -r ./veracode-pipeline-mitigation/requirements.txt
-      python ./veracode-pipeline-mitigation/vcpipemit.py -an "Verademo ADO" -rf pipeline.json -of "new_baseline.json"
+      python ./veracode-pipeline-mitigation/vcpipemit.py -an "Verademo ADO" -rf pipeline.json -of "toCompare.json"
 
 - task: PublishBuildArtifacts@1
   condition:
       succeededOrFailed()
   inputs:
-    pathToPublish: 'new_baseline.json'
-    artifactName: new_baseline
+    pathToPublish: 'pipeline.json'
+    artifactName: results
+    
+- task: PublishBuildArtifacts@1
+  condition:
+      succeededOrFailed()
+  inputs:
+    pathToPublish: 'toCompare.json'
+    artifactName: results
+    
