--- a/azure-pipelines-2.yml
+++ b/azure-pipelines-2.yml
@@ -35,6 +35,7 @@ steps:
       succeededOrFailed()
 
 - task: CmdLine@2
+  name: ExtractMitigations
   env:
     VERACODE_API_KEY_ID: $(vid)
     VERACODE_API_KEY_SECRET: $(vkey)
@@ -43,6 +44,14 @@ steps:
       git clone https://github.com/cadonuno/veracode-pipeline-mitigation
       pip install -r ./veracode-pipeline-mitigation/requirements.txt
       python ./veracode-pipeline-mitigation/vcpipemit.py -an "Verademo ADO" -rf pipeline.json -of "toCompare.json"
+
+- task: CmdLine@2
+  name: CompareResultsAndFailBuild
+  inputs:
+    script: |
+      git clone https://github.com/cadonuno/PipelineResultsCompare
+      pip install -r ./PipelineResultsCompare/requirements.txt
+      python ./PipelineResultsCompare/pipeline_results_compare.py -of "filtered_pipeline_results.json" -br pipeline.json -ff "toCompare.json" --fail_on_severity "Very High, High"
 
 - task: PublishBuildArtifacts@1
   condition:
@@ -58,3 +67,21 @@ steps:
     pathToPublish: 'toCompare.json'
     artifactName: results
     
+
+- task: CmdLine@2
+  name: SaveResultsAsJunitTestResults
+  inputs:
+    script: |
+      echo Saving results as xml and html
+      curl -sSO https://raw.githubusercontent.com/cadonuno/Pipeline2JUnitXml/master/pipeline2junitxml.py
+      python pipeline2junitxml.py -f results.json --xml_name PipelineScanJunit.xml
+      echo Finished saving results
+  condition:
+      succeededOrFailed()
+
+- task: PublishTestResults@2
+  inputs:
+    testResultsFormat: 'JUnit'
+    testResultsFiles: 'PipelineScanJunit.xml'
+  condition:
+      succeededOrFailed()
