--- a/auto-packager-example.yml
+++ b/auto-packager-example.yml
@@ -11,24 +11,41 @@ pool:
 
 steps:
 - task: CmdLine@2
+  name: "VeracodePackage"
   env:
-        VERACODE_API_KEY_ID: $(VERACODE_ID)
-        VERACODE_API_KEY_SECRET: $(VERACODE_SECRET)
+    VERACODE_API_KEY_ID: $(VERACODE_ID)
+    VERACODE_API_KEY_SECRET: $(VERACODE_SECRET)
   inputs:
     script: |
       curl -fsS https://tools.veracode.com/veracode-cli/install | sh
-                		./veracode package -das . --output verascan --trust
-      
-                		# Check if the verascan directory exists
-                		if [ ! -d "verascan" ]; then
-                			echo "Error: verascan directory not found."
-                			exit 1
-                		fi
-      
-                		# Loop through files in verascan directory and perform static scan
-                		for file in verascan/*; do
-                			if [ -f "$file" ]; then
-                				echo "Scanning $file ..."
-                				./veracode static scan "$file"
-                			fi
-                		done
+      ./veracode package -das . --output verascan --trust
+
+      # Check if the verascan directory exists
+      if [ ! -d "verascan" ]; then
+        echo "Error: verascan directory not found."
+        exit 1
+      fi
+                    
+- task: CmdLine@2
+  name: DownloadScanner
+  inputs:
+    script: |
+      sudo apt install libxml2-utils
+      curl https://repo1.maven.org/maven2/com/veracode/vosp/api/wrappers/vosp-api-wrappers-java/maven-metadata.xml -o wrapper-versions.xml
+      version=$(xmllint --xpath "//metadata/versioning/latest/text()" wrapper-versions.xml)
+      curl https://repo1.maven.org/maven2/com/veracode/vosp/api/wrappers/vosp-api-wrappers-java/${version}/vosp-api-wrappers-java-${version}-dist.zip -o veracode-api-wrapper.zip
+      unzip veracode-api-wrapper.zip
+
+- task: CmdLine@2
+  name: "VeracodePolicyScan"
+  env:
+    VERACODE_API_KEY_ID: $(VERACODE_ID)
+    VERACODE_API_KEY_SECRET: $(VERACODE_SECRET)
+  inputs:
+    script: |
+      for file in verascan/*; do
+                  	if [ -f "$file" ]; then
+                  		echo "Scanning $file ..."
+                  		./veracode static scan "$file"
+                  	fi
+                  done
