--- a/auto-packager-example.yml
+++ b/auto-packager-example.yml
@@ -18,7 +18,7 @@ steps:
   inputs:
     script: |
       curl -fsS https://tools.veracode.com/veracode-cli/install | sh
-      ./veracode package -das . --output verascan --trust
+      ./veracode package -das . --output ./verascan
 
       # Check if the verascan directory exists
       if [ ! -d "verascan" ]; then
@@ -34,9 +34,5 @@ steps:
     VERACODE_API_KEY_SECRET: $(VERACODE_SECRET)
   inputs:
     script: |
-      for file in verascan/*; do
-                  	if [ -f "$file" ]; then
-                  		echo "Scanning $file ..."
-                  		./veracode static scan "$file"
-                  	fi
-                  done
+     zip -r ./verascan.zip ./verascan
+     ./veracode static scan ./verascan.zip
