--- a/auto-packager-example.yml
+++ b/auto-packager-example.yml
@@ -19,7 +19,9 @@ steps:
     script: |
       curl -fsS https://tools.veracode.com/veracode-cli/install | sh
       ./veracode package -das . --output ./verascan
-      zip -r verascan.zip ./verascan
+      cd ./verascan
+      zip -r verascan.zip .
+      cd ..
 
 - task: PublishBuildArtifacts@1
   inputs:
