Update auto-packager-example.yml for Azure Pipelines

--- a/auto-packager-example.yml
+++ b/auto-packager-example.yml
@@ -29,6 +29,13 @@ steps:
     ArtifactName: 'scan-artifact'
     publishLocation: 'Container'
 
+- task: PublishBuildArtifacts@1
+  inputs:
+    PathtoPublish: './verascan/verademo.war'
+    ArtifactName: 'pre-zip'
+    publishLocation: 'Container'
+
+
 - task: CmdLine@2
   name: "VeracodePipelineScan"
   env:
