--- a/auto-packager-example.yml
+++ b/auto-packager-example.yml
@@ -18,8 +18,16 @@ steps:
   inputs:
     script: |
       curl -fsS https://tools.veracode.com/veracode-cli/install | sh
-      ./veracode package -das . --output ./verascan
+      ./veracode package -das . --output verascan
+      cd ./verascan
+      zip -r ./../verascan.zip .
+      cd ..
 
+- task: PublishBuildArtifacts@1
+  inputs:
+    PathtoPublish: './verascan.zip'
+    ArtifactName: 'scan-artifact'
+    publishLocation: 'Container'
 
 - task: PublishBuildArtifacts@1
   inputs:
