--- a/packager-policy-scan.yml
+++ b/packager-policy-scan.yml
@@ -1,15 +1,14 @@
-# Starter pipeline
-# Start with a minimal pipeline that you can customize to build and deploy your code.
-# Add steps that build, run tests, deploy, and more:
-# https://aka.ms/yaml
-
+# This is an example YAML for implementing Veracode Agent-Based SCA, Static Policy, and Static Sandbox Scans
 trigger:
 - master
 
 pool:
+  # Below, the package and SCA steps will have 2 versions, one for LINUX/MAC and one for Windows. If using Windows, switch to a Windows image
   vmImage: ubuntu-latest
 
 steps:
+
+# LINUX/MAC: This step will package the application and save the artifacts to a folder called 'verascan'
 - task: CmdLine@2
   name: "VeracodePackage"
   env:
@@ -26,6 +25,19 @@ steps:
         exit 1
       fi
 
+# WINDOWS: This step will package the application and save the artifacts to a folder called 'verascan'
+- task: CmdLine@2
+  name: "VeracodePackage"
+  env:
+    VERACODE_API_KEY_ID: $(VERACODE_ID)
+    VERACODE_API_KEY_SECRET: $(VERACODE_SECRET)
+  inputs:
+    script: |
+      Set-ExecutionPolicy AllSigned -Scope Process -Force
+      curl -fsS https://tools.veracode.com/veracode-cli/install | sh
+      $ProgressPreference = "silentlyContinue"; iex ((New-Object System.Net.WebClient).DownloadString('https://tools.veracode.com/veracode-cli/install.ps1'))
+
+# LINUX/MAC: This step will call an agent-based SCA scan
 - task: CmdLine@2
   name: "VeracodeSCA"
   env:
