--- a/packager-policy-scan.yml
+++ b/packager-policy-scan.yml
@@ -1,4 +1,7 @@
 # This is an example YAML for implementing Veracode Agent-Based SCA, Static Policy, and Static Sandbox Scans
+# The examples use VERACODE_ID from a Variable but, for a real-life environment, it is better to keep it on a Secrets Vault.
+# Same goes for VERACODE_SECRET and SCA_TOKEN
+# If using the Veracode plugin (as shown in the Veracode@3 step), you will also need a Veracode Platform service connection which, in this example, is called Veracode Analysis Center
 trigger:
 - master
 
@@ -17,7 +20,7 @@ steps:
   inputs:
     script: |
       curl -fsS https://tools.veracode.com/veracode-cli/install | sh
-      ./veracode package -das . --output ./verascan
+      ./veracode package -das <folder to package> --output ./verascan
 
       # Check if the verascan directory exists
       if [ ! -d "verascan" ]; then
@@ -26,8 +29,9 @@ steps:
       fi
 
 
-# WINDOWS: This step will package the application and save the artifacts to a folder called 'verascan'
+# WINDOWS: This step will package the application and save the artifacts to a folder called 'verascan'. If you are not building the repository root, replace 
 - task: PowerShell@2
+  name: "VeracodePackage"
   env:
     VERACODE_API_KEY_ID: $(VERACODE_ID)
     VERACODE_API_KEY_SECRET: $(VERACODE_SECRET)
@@ -37,6 +41,7 @@ steps:
       Set-ExecutionPolicy AllSigned -Scope Process -Force
             curl -fsS https://tools.veracode.com/veracode-cli/install | sh
             $ProgressPreference = "silentlyContinue"; iex ((New-Object System.Net.WebClient).DownloadString('https://tools.veracode.com/veracode-cli/install.ps1'))
+            veracode package -das <folder to package> --output ./verascan
 
 # LINUX/MAC: This step will call an agent-based SCA scan
 - task: CmdLine@2
@@ -45,6 +50,18 @@ steps:
     SRCCLR_API_TOKEN: $(SCA_TOKEN)
   inputs:
     script: curl -sSL https://download.sourceclear.com/ci.sh | sh
+
+# WINDOWS: This step will call an agent-based SCA scan
+- task: PowerShell@2
+  env:
+    SRCCLR_API_TOKEN: $(SCA_TOKEN)
+  inputs:
+    targetType: 'inline'
+    script: |
+      Set-ExecutionPolicy AllSigned -Scope Process -Force
+             $ProgressPreference = 'SilentlyContinue'
+             [Net.ServicePointManager]::SecurityProtocol = [Net.SecurityProtocolType]::Tls12
+             iex ((New-Object System.Net.WebClient).DownloadString('https://download.srcclr.com/ci.ps1')); srcclr scan <folder to scan>
 
 # Either this or the following 2 steps. Make sure to replace the Application name
 - task: Veracode@3
