--- a/auto-packager-example.yml
+++ b/auto-packager-example.yml
@@ -1,8 +1,8 @@
-# Starter pipeline
-# Start with a minimal pipeline that you can customize to build and deploy your code.
-# Add steps that build, run tests, deploy, and more:
-# https://aka.ms/yaml
+# This is an example YAML for implementing Veracode Agent-Based SCA and Static Pipeline Scans
+# The examples use VERACODE_ID from a Variable but, for a real-life environment, it is better to keep it on a Secrets Vault.
+# Same goes for VERACODE_SECRET and SCA_TOKEN
 
+# Your triggers may vary, but will usually be linked to a push to a feature branch or a pull request open/sync
 trigger:
 - master
 
@@ -10,6 +10,8 @@ pool:
   vmImage: ubuntu-latest
 
 steps:
+
+# LINUX/MAC: This step will package the application and save the artifacts to a folder called 'verascan'
 - task: CmdLine@2
   name: "VeracodePackage"
   env:
@@ -20,6 +22,41 @@ steps:
       curl -fsS https://tools.veracode.com/veracode-cli/install | sh
       ./veracode package -das . --output verascan
 
+# WINDOWS: This step will package the application and save the artifacts to a folder called 'verascan'. If you are not building the repository root, replace 
+- task: PowerShell@2
+  name: "VeracodePackage"
+  env:
+    VERACODE_API_KEY_ID: $(VERACODE_ID)
+    VERACODE_API_KEY_SECRET: $(VERACODE_SECRET)
+  inputs:
+    targetType: 'inline'
+    script: |
+      Set-ExecutionPolicy AllSigned -Scope Process -Force
+            curl -fsS https://tools.veracode.com/veracode-cli/install | sh
+            $ProgressPreference = "silentlyContinue"; iex ((New-Object System.Net.WebClient).DownloadString('https://tools.veracode.com/veracode-cli/install.ps1'))
+            veracode package -das <folder to package> --output ./verascan
+
+# LINUX/MAC: This step will call an agent-based SCA scan
+- task: CmdLine@2
+  name: "VeracodeSCA"
+  env:
+    SRCCLR_API_TOKEN: $(SCA_TOKEN)
+  inputs:
+    script: curl -sSL https://download.sourceclear.com/ci.sh | sh
+
+# WINDOWS: This step will call an agent-based SCA scan
+- task: PowerShell@2
+  env:
+    SRCCLR_API_TOKEN: $(SCA_TOKEN)
+  inputs:
+    targetType: 'inline'
+    script: |
+      Set-ExecutionPolicy AllSigned -Scope Process -Force
+             $ProgressPreference = 'SilentlyContinue'
+             [Net.ServicePointManager]::SecurityProtocol = [Net.SecurityProtocolType]::Tls12
+             iex ((New-Object System.Net.WebClient).DownloadString('https://download.srcclr.com/ci.ps1')); srcclr scan <folder to scan>
+
+# LINUX/MAC: This step will call a Veracode Pipeline Scan
 - task: CmdLine@2
   name: "VeracodePipelineScan"
   env:
@@ -33,3 +70,26 @@ steps:
           ./veracode static scan "$file"
         fi
       done
+
+# WINDOWS: This step will call a Veracode Pipeline Scan
+- task: CmdLine@2
+  name: "VeracodePipelineScan"
+  env:
+    VERACODE_API_KEY_ID: $(VERACODE_ID)
+    VERACODE_API_KEY_SECRET: $(VERACODE_SECRET)
+  inputs:
+    script: |
+      for file in verascan/*; do
+        if [ -f "$file" ]; then
+          echo "Scanning $file ..."
+          veracode static scan "$file"
+        fi
+      done
+- task: PowerShell@2
+  inputs:
+    targetType: 'inline'
+    script: |
+      Get-ChildItem "./verascan" | 
+      Foreach-Object {
+          veracode static scan "$_.FullName"
+      }
