--- a/packager-policy-scan.yml
+++ b/packager-policy-scan.yml
@@ -2,6 +2,8 @@
 # The examples use VERACODE_ID from a Variable but, for a real-life environment, it is better to keep it on a Secrets Vault.
 # Same goes for VERACODE_SECRET and SCA_TOKEN
 # If using the Veracode plugin (as shown in the Veracode@3 step), you will also need a Veracode Platform service connection which, in this example, is called Veracode Analysis Center
+
+# Your triggers may vary, but will usually be linked to an approved PR or a Release Candidate
 trigger:
 - master
 
@@ -63,17 +65,17 @@ steps:
              [Net.ServicePointManager]::SecurityProtocol = [Net.SecurityProtocolType]::Tls12
              iex ((New-Object System.Net.WebClient).DownloadString('https://download.srcclr.com/ci.ps1')); srcclr scan <folder to scan>
 
+
 # Either this or the following 2 steps. Make sure to replace the Application name
 - task: Veracode@3
   inputs:
     ConnectionDetailsSelection: 'Service Connection'
     AnalysisService: 'Veracode Analysis Center'
-    veracodeAppProfile: 'Verademo ADO'
+    veracodeAppProfile: '<application name>'
     version: '$(build.buildNumber)'
-    filepath: './target/verademo.war'
+    filepath: './verascan'
     importResults: true
     maximumWaitTime: '360'
-
 
 - task: CmdLine@2
   name: DownloadScanner
@@ -91,4 +93,4 @@ steps:
     VERACODE_API_KEY_ID: $(VERACODE_ID)
     VERACODE_API_KEY_SECRET: $(VERACODE_SECRET)
   inputs:
-    script: 'java -jar ./VeracodeJavaAPI.jar -appname "Verademo ADO 2" -vid "${VERACODE_API_KEY_ID}" -vkey "${VERACODE_API_KEY_SECRET}" -action uploadandscan -createprofile false -filepath "./verascan" -version "$(build.buildNumber)"'
+    script: 'java -jar ./VeracodeJavaAPI.jar -appname "<application name>" -vid "${VERACODE_API_KEY_ID}" -vkey "${VERACODE_API_KEY_SECRET}" -action uploadandscan -createprofile false -filepath "./verascan" -version "$(build.buildNumber)"'
