--- a/auto-packager-example.yml
+++ b/auto-packager-example.yml
@@ -71,7 +71,7 @@ steps:
         fi
       done
 
-# WINDOWS: This step will call a Veracode Pipeline Scan
+# LINUX/MAC: This step will call a Veracode Pipeline Scan
 - task: CmdLine@2
   name: "VeracodePipelineScan"
   env:
@@ -85,6 +85,7 @@ steps:
           veracode static scan "$file"
         fi
       done
+# WINDOWS: This step will call a Veracode Pipeline Scan
 - task: PowerShell@2
   inputs:
     targetType: 'inline'
