--- a/auto-packager-example.yml
+++ b/auto-packager-example.yml
@@ -70,7 +70,7 @@ steps:
     VERACODE_API_KEY_SECRET: $(VERACODE_SECRET)
   inputs:
     script: |
-      ./veracode policy get <name of the policy to use> # can be removed if using a different fail criteria
+      ./veracode policy get "<name of the policy to use>" # can be removed if using a different fail criteria
       for file in verascan/*; do
         if [ -f "$file" ]; then
           echo "Scanning $file ..."
@@ -89,5 +89,5 @@ steps:
       veracode policy get <name of the policy to use> # can be removed if using a different fail criteria
       Get-ChildItem "./verascan" | 
       Foreach-Object {
-          veracode static scan "$_.FullName" --policy-file <name of the policy to use (replace any spaces with underscores)>.json
+          veracode static scan "$_.FullName" --policy-file "<name of the policy to use (replace any spaces with underscores)>.json"
       }
