--- a/auto-packager-example.yml
+++ b/auto-packager-example.yml
@@ -62,6 +62,7 @@ steps:
              iex ((New-Object System.Net.WebClient).DownloadString('https://download.srcclr.com/ci.ps1')); srcclr scan <folder to scan>
 
 # LINUX/MAC: This step will call a Veracode Pipeline Scan. This example fetches your security policy from Veracode to filter the scan results, but a different fail criteria can be used if needed - uses the veracode CLI installed in line 22
+# depending on your runner configuration, this might need to run within the same task as VeracodePackage (line 22-23)
 - task: CmdLine@2
   name: "VeracodePipelineScan"
   env:
@@ -78,6 +79,7 @@ steps:
       done
 
 # WINDOWS: This step will call a Veracode Pipeline Scan.  This example fetches your security policy from Veracode to filter the scan results, but a different fail criteria can be used if needed - uses the veracode CLI installed in lines 34-35
+# depending on your runner configuration, this might need to run within the same task as VeracodePackage (line 34-36)
 - task: PowerShell@2
   env:
     VERACODE_API_KEY_ID: $(VERACODE_ID)
