--- a/auto-packager-example.yml
+++ b/auto-packager-example.yml
@@ -90,5 +90,6 @@ steps:
       veracode policy get <name of the policy to use> # can be removed if using a different fail criteria
       Get-ChildItem "./verascan" | 
       Foreach-Object {
-          veracode static scan "$_" --policy-file <name of the policy to use (replace any spaces with underscores)>.json
+        $toScan=$_.FullName
+        veracode static scan "$toScan" --policy-file <name of the policy to use (replace any spaces with underscores)>.json
       }
