Update contariner-scan-ado.yml for Azure Pipelines

--- a/contariner-scan-ado.yml
+++ b/contariner-scan-ado.yml
@@ -25,7 +25,7 @@ steps:
       VERACODE_API_KEY_ID: $(VERACODE_ID)
       VERACODE_API_KEY_SECRET: $(VERACODE_SECRET)
     inputs:
-      script: './veracode scan --source  juliantotzek/verademo1-tomcat --type image --output scan-verademo.json --format json'
+      script: './veracode scan --source  juliantotzek/verademo1-tomcat --type image --output scan-verademo.json --format json || true'
 
   - task: CmdLine@2
     name: ScanIac
@@ -33,7 +33,7 @@ steps:
       VERACODE_API_KEY_ID: $(VERACODE_ID)
       VERACODE_API_KEY_SECRET: $(VERACODE_SECRET)
     inputs:
-      script: './veracode scan --source https://github.com/bridgecrewio/terragoat --type repo --output iac.json --format json'    
+      script: './veracode scan --source https://github.com/bridgecrewio/terragoat --type repo --output iac.json --format json || true'    
 
   - task: CmdLine@2
     name: ScanDirectory
@@ -41,7 +41,7 @@ steps:
       VERACODE_API_KEY_ID: $(VERACODE_ID)
       VERACODE_API_KEY_SECRET: $(VERACODE_SECRET)
     inputs:
-      script: './veracode scan --source ./ --type directory --output directory.json --format json'    
+      script: './veracode scan --source ./ --type directory --output directory.json --format json || true'    
 
   - task: CmdLine@2
     name: MakeSbom
@@ -49,7 +49,7 @@ steps:
       VERACODE_API_KEY_ID: $(VERACODE_ID)
       VERACODE_API_KEY_SECRET: $(VERACODE_SECRET)
     inputs:
-      script: './veracode sbom --source https://github.com/veracode/verademo --type repo --output repo-sbom-cyclondx.json --format cyclonedx-json'    
+      script: './veracode sbom --source https://github.com/veracode/verademo --type repo --output repo-sbom-cyclondx.json --format cyclonedx-json || true'    
 
   - task: PublishBuildArtifacts@1
     condition:
