--- a/auto-packager-example.yml
+++ b/auto-packager-example.yml
@@ -14,9 +14,6 @@ steps:
 # LINUX/MAC: This step will package the application and save the artifacts to a folder called 'verascan'
 - task: CmdLine@2
   name: "VeracodePackage"
-  env:
-    VERACODE_API_KEY_ID: $(VERACODE_ID)
-    VERACODE_API_KEY_SECRET: $(VERACODE_SECRET)
   inputs:
     script: |
       curl -fsS https://tools.veracode.com/veracode-cli/install | sh
@@ -24,10 +21,7 @@ steps:
 
 # WINDOWS: This step will package the application and save the artifacts to a folder called 'verascan'
 - task: PowerShell@2
-  name: "VeracodePackage"
-  env:
-    VERACODE_API_KEY_ID: $(VERACODE_ID)
-    VERACODE_API_KEY_SECRET: $(VERACODE_SECRET)
+  name: "VeracodePackage
   inputs:
     targetType: 'inline'
     script: |
