--- a/auto-packager-example.yml
+++ b/auto-packager-example.yml
@@ -17,7 +17,7 @@ steps:
   inputs:
     script: |
       curl -fsS https://tools.veracode.com/veracode-cli/install | sh
-      ./veracode package -das . --output verascan
+      ./veracode package -vas . --output verascan
 
 # WINDOWS: This step will package the application and save the artifacts to a folder called 'verascan'
 - task: PowerShell@2
@@ -27,7 +27,7 @@ steps:
     script: |
       Set-ExecutionPolicy AllSigned -Scope Process -Force
             $ProgressPreference = "silentlyContinue"; iex ((New-Object System.Net.WebClient).DownloadString('https://tools.veracode.com/veracode-cli/install.ps1'))
-            veracode package -das <folder to package> --output ./verascan
+            veracode package -vas <folder to package> --output ./verascan
 
 # LINUX/MAC: This step will call an agent-based SCA scan
 - task: CmdLine@2
