--- a/contariner-scan-ado.yml
+++ b/contariner-scan-ado.yml
@@ -19,13 +19,13 @@ steps:
       script: |
         curl -fsS https://tools.veracode.com/veracode-cli/install | sh
 
-  - task: CmdLine@2
-    name: ScanImage
-    env:
-      VERACODE_API_KEY_ID: $(VERACODE_ID)
-      VERACODE_API_KEY_SECRET: $(VERACODE_SECRET)
-    inputs:
-      script: './veracode scan --source  juliantotzek/verademo1-tomcat --type image --output scan-verademo.json --format json || true'
+#  - task: CmdLine@2
+#    name: ScanImage
+#    env:
+#      VERACODE_API_KEY_ID: $(VERACODE_ID)
+#      VERACODE_API_KEY_SECRET: $(VERACODE_SECRET)
+#    inputs:
+#      script: './veracode scan --source  juliantotzek/verademo1-tomcat --type image --output scan-verademo.json --format json || true'
 
   - task: CmdLine@2
     name: ScanIac
