--- a/contariner-scan-ado.yml
+++ b/contariner-scan-ado.yml
@@ -41,7 +41,7 @@ steps:
       VERACODE_API_KEY_ID: $(VERACODE_ID)
       VERACODE_API_KEY_SECRET: $(VERACODE_SECRET)
     inputs:
-      script: './veracode scan --source ./../Verademo-Sca --type directory --output directory.json --format json || true'    
+      script: './veracode scan --source ./../${PWD##*/} --type directory --output directory.json --format json || true'    
 
   - task: CmdLine@2
     name: MakeSbom
